fix: add border radius to Subscribers and AvatarHead components; adjust z-index in theme selector

--- a/src/styles/me/sidebar.module.css
+++ b/src/styles/me/sidebar.module.css
@@ -38,8 +38,6 @@
     width: 300px;
     align-items: flex-start;
     box-sizing: border-box;
-
-    border-radius: 10px;
 }
 
 .subscribe_container {
